Fixed anchor misaligned

--- a/style.css
+++ b/style.css
@@ -231,3 +231,12 @@ table tbody tr {
 table#masters tbody tr td:first-child {
     border-right: 1px solid #2d2d2d;
 }
+
+a[name]:before {
+    content: '';
+    display: block;
+    position: relative;
+    width: 0;
+    height: 80px;
+    margin-top: -80px;
+}
